[package]
name = "optical"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
rand = "0.8.5"
thiserror = "1.0.38"
tokio = { version = "1", features = ["full"] }
wasabi_leb128 = "0.4.0"
