[package]
name = "optical"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[profile.release]
debug = true

[dependencies]
anyhow = "1.0.68"
async-recursion = "1.0.0"
bytes = "1.3.0"
futures-util = "0.3.25"
rand = "0.8.5"
serde = { version = "1.0.151", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1", features = ["full"] }
typetag = "0.2.4"
unwrap_or = "1.0.0"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
wasabi_leb128 = "0.4.0"
optical-protocol = {path = "optical-protocol"}
bevy_ecs = "0.9.1"
log = "0.4.17"
simplelog = { version = "^0.11.0", features = ["paris"] }
